@@ -29,6 +29,7 @@
 enum {
 	XL_NS_SS,
 	XL_NS_SS_DRAW,
+	XL_NS_MSSS,
 	XL_NS_CHART,
 	XL_NS_CHART_DRAW,
 	XL_NS_DRAW,
